# Qa_Agent_FS

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  clear_modal_db.py  deploy_modal.py  docker-compose.yml  langgraph.json  pyproject.toml  requirements.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
data/: eval_dataset.json  memory.db
docs/: ARCHITECTURE.md  CHANGELOG.md  CONCEPTS.md  DEBUGGING.md  HARDENING.md  HLD.md  LEARNING_PATH.md  USE_CASES.md  VERSIONS.md
qa-rag-agent-ui/: README.md  angular.json  netlify.toml  package-lock.json  package.json
qa-rag-agent-ui/src/: index.html  styles.scss
qa-rag-agent-ui/src/app/: app.routes.ts  app.ts
qa-rag-agent-ui/src/app/core/models/: api.models.ts
qa-rag-agent-ui/src/app/core/services/: api.service.ts  stream.service.ts
qa-rag-agent-ui/src/app/features/chat/: chat.component.html  chat.component.scss  chat.component.ts
qa-rag-agent-ui/src/app/features/sidebar/: sidebar.component.html  sidebar.component.scss  sidebar.component.ts
qa-rag-agent-ui/src/environments/: environment.prod.ts  environment.ts
src/: __init__.py
src/api/: __init__.py  main.py  schemas.py
src/core/: checkpointer.py  graph.py  nodes.py  prompts.py  state.py
src/eval/: __init__.py  dataset.py  evaluator.py  runner.py
src/llm/: provider.py
src/memory/: models.py  repository.py  store.py
src/observability/: debug.py  tracing.py
src/rag/: embeddings.py  ingestion.py  retriever.py
src/tools/: __init__.py  definitions.py  web_search.py
src/ui/: app.py
tests/: conftest.py  test_api.py  test_checkpointing.py  test_eval.py  test_graph.py  test_human_loop.py  test_ingestion.py  test_memory.py  test_memory_sqlite.py  test_observability.py  test_retrieval.py  test_tools.py
tests/fixtures/: sample.md  sample.txt
tmp_test_chroma/: chroma.sqlite3
